[gd_scene load_steps=7 format=3 uid="uid://yuw15pr1pj53"]

[ext_resource type="Theme" uid="uid://da6ednpdx62ww" path="res://theme.tres" id="1_ucs8w"]
[ext_resource type="Shader" path="res://shaders/pause.gdshader" id="1_w82na"]
[ext_resource type="Script" path="res://scripts/pause.gd" id="2_dna5w"]
[ext_resource type="AudioStream" uid="uid://cs153g76btq6l" path="res://sounds/options_slider_tick.wav" id="3_y85vu"]
[ext_resource type="FontFile" uid="uid://bjuv3x1m38iht" path="res://textures/04B_03__.TTF" id="3_yu01e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jgkdy"]
shader = ExtResource("1_w82na")
shader_parameter/blur = 0.8
shader_parameter/brightness = 0.9

[node name="Control" type="Control"]
process_mode = 3
z_index = 585
layout_mode = 3
anchors_preset = 0
offset_right = 171.0
offset_bottom = 149.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_ucs8w")
script = ExtResource("2_dna5w")

[node name="CenterContainer" type="CenterContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_right = -8

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Volume Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yu01e")
theme_override_font_sizes/font_size = 8
text = "Volume"
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 1
min_value = -20.0
max_value = 8.0
step = 2.0
value = 8.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Fullscreen"

[node name="fullscreen_check" type="CheckBox" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3"]
layout_mode = 2

[node name="-2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "   Resume   "

[node name="Restart" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "   Restart   "

[node name="Quit" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "     Quit     "

[node name="Pause" type="ColorRect" parent="."]
process_mode = 3
visible = false
z_index = 1000
material = SubResource("ShaderMaterial_jgkdy")
layout_mode = 0
offset_right = 256.0
offset_bottom = 224.0

[node name="tick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_y85vu")
volume_db = -10.0
pitch_scale = 0.87

[connection signal="drag_ended" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/MarginContainer/HBoxContainer/Volume" to="Pause" method="_on_volume_drag_ended"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/MarginContainer/HBoxContainer/Volume" to="Pause" method="_on_volume_value_changed"]
[connection signal="toggled" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/MarginContainer/HBoxContainer/fullscreen_check" to="." method="_on_fullscreen_check_toggled"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer3/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
